--- a/digitala.html
+++ b/digitala.html
@@ -30,7 +30,7 @@
         }
 
         body {
-            font-family: 'Poppins', sans-serif;
+            font-family: 'Poppins', josef sans;
             background: var(--bg-main);
             color: var(--text-dark);
             padding: 60px 20px 100px 20px;
@@ -454,7 +454,7 @@
         <div class="logo-title">
             <img src="https://i.imgur.com/FXNRead.png" alt="Digitala Logo" class="logo" />
             <div>
-                <h1>For Digitala</h1>
+                <h1><br>For Digitala</br></h1>
             </div>
         </div>
     </header>
