--- a/digitala.html
+++ b/digitala.html
@@ -30,7 +30,7 @@
         }
 
         body {
-            font-family: 'Poppins', josef sans;
+            font-family: 'Josef Sans', sans-serif;
             background: var(--bg-main);
             color: var(--text-dark);
             padding: 60px 20px 100px 20px;
