--- a/digitala.html
+++ b/digitala.html
@@ -8,25 +8,24 @@
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <style>
         :root {
-            --blue: #4869a3;
-            --blue-dark: #1e3152;
-            --blue-light: #bcd2ee;
-            --lavender: #e9e6f5;
-            --peach-pink: #facfd0;
-            --rose: #db498a;
-            --rose-light: #f7a7c6;
-            --mauve: #b882c8;
-            --main-bg: linear-gradient(120deg, #FAE6E7 0%, #E9E6F5 36%, #B882C8 82%, #4869A3 100%);
-            --glass-bg: rgba(255,255,255,0.58);
+            --peach: #f2cdb6;
+            --peach-dark: #e0b88f;
+            --peach-light: #fae6d8;
+            --brown: #bc8a5f;
+            --tan: #f5e5d1;
+            --dark: #232323;
+            --accent: #e49f62;
+            --main-bg: linear-gradient(120deg, #f2cdb6 0%, #e0b88f 54%, #bc8a5f 100%);
+            --glass-bg: rgba(255, 242, 228, 0.60);
             --glass-blur: blur(13px);
-            --card-bg: rgba(255,255,255,0.62);
-            --card-border: rgba(220,170,220, 0.13);
-            --service-hover: linear-gradient(120deg, #bcd2ee 0%, #db498a 100%);
-            --footer-bg: #bcd2ee;
-            --social-gradient: linear-gradient(135deg, #db498a 0%, #b882c8 100%);
-            --social-hover: linear-gradient(135deg, #26416D 0%, #f7a7c6 100%);
-            --shadow: 0 8px 38px #bcd2ee60;
-            --inner-shadow: 0 2px 8px #db498a28;
+            --card-bg: rgba(255, 246, 235, 0.65);
+            --card-border: rgba(220, 170, 120, 0.13);
+            --service-hover: linear-gradient(120deg, #f2cdb6 0%, #bc8a5f 100%);
+            --footer-bg: #fae6d8;
+            --social-gradient: linear-gradient(135deg, #bc8a5f 0%, #e0b88f 100%);
+            --social-hover: linear-gradient(135deg, #232323 0%, #f2cdb6 100%);
+            --shadow: 0 8px 38px #e0b88f66;
+            --inner-shadow: 0 2px 8px #bc8a5f28;
         }
 
         html, body {
@@ -36,7 +35,7 @@
             padding: 0;
             font-family: 'Poppins', sans-serif;
             background: var(--main-bg);
-            color: #22223b;
+            color: var(--dark);
             overflow-x: hidden;
             min-height: 100vh;
         }
@@ -64,13 +63,13 @@
             position: absolute;
             left: 0;
             top: 0;
-            opacity: 0.65;
+            opacity: 0.4;
         }
 
         header {
             background: var(--glass-bg);
             border-radius: 2.2rem;
-            box-shadow: var(--shadow), 0 2px 24px #e9e6f5b2;
+            box-shadow: var(--shadow), 0 2px 24px #e0b88f70;
             margin: 1.5rem auto 2rem auto;
             max-width: 700px;
             padding: 2.7rem 1.2rem 2.1rem 1.2rem;
@@ -100,26 +99,26 @@
             min-height: 90px;
             border-radius: 35% 65% 53% 47%/60% 44% 62% 40%;
             object-fit: cover;
-            border: 0.5rem solid var(--rose);
-            background: linear-gradient(120deg, #faf1f3 65%, #db498a 100%);
-            box-shadow: 0 0 44px var(--rose-light), 0 0 60px #bcd2ee60;
+            border: 0.5rem solid var(--brown);
+            background: linear-gradient(120deg, #fae6d8 65%, #bc8a5f 100%);
+            box-shadow: 0 0 44px var(--peach), 0 0 60px #e0b88f60;
             transition: transform 0.37s, box-shadow 0.44s, filter 0.5s;
-            filter: drop-shadow(0 2px 20px #b882c8bb);
+            filter: drop-shadow(0 2px 20px #e0b88fbb);
         }
         .logo:hover {
             transform: scale(1.07) rotate(-6deg);
-            box-shadow: 0 0 110px var(--rose), 0 0 170px var(--mauve);
-            filter: brightness(1.08) contrast(1.13) drop-shadow(0 0 60px #db498ad8);
+            box-shadow: 0 0 110px var(--brown), 0 0 170px var(--peach);
+            filter: brightness(1.08) contrast(1.13) drop-shadow(0 0 60px #bc8a5fd8);
         }
         h1 {
             font-family: 'Pacifico', cursive, 'Poppins', sans-serif;
             font-size: clamp(2.2rem, 8vw, 4.1rem);
             font-weight: 400;
-            color: var(--rose);
+            color: var(--brown);
             letter-spacing: 0.13em;
             text-align: center;
             user-select: none;
-            text-shadow: 2px 8px 18px #db498a4d, 0 0 24px var(--lavender), 0 2px 0 #fff;
+            text-shadow: 2px 8px 18px #bc8a5f4d, 0 0 24px var(--peach-light), 0 2px 0 #fff;
             margin: 0 0 10px 0;
             width: 100%;
             line-height: 1.04;
@@ -131,7 +130,7 @@
             margin: 0 auto 2.5rem auto;
             background: var(--glass-bg);
             border-radius: 1.6rem;
-            box-shadow: 0 4px 24px #bcd2ee62;
+            box-shadow: 0 4px 24px #e0b88f62;
             padding: 2.8rem 0.5rem 2.2rem 0.5rem;
             border: 2px solid var(--card-border);
             position: relative;
@@ -145,18 +144,18 @@
             inset: 0;
             border-radius: 1.6rem;
             pointer-events: none;
-            box-shadow: 0 16px 52px #db498a15 inset;
+            box-shadow: 0 16px 52px #bc8a5f20 inset;
         }
         .services h2 {
             text-align: center;
             font-size: clamp(1.2rem, 5vw, 2.3rem);
             font-weight: 900;
-            color: var(--blue-dark);
+            color: var(--brown);
             margin-bottom: 2rem;
             letter-spacing: 0.29em;
             text-transform: uppercase;
             user-select: none;
-            text-shadow: 2px 2px 13px #db498a3c, 0 0 15px #f7a7c6;
+            text-shadow: 2px 2px 13px #bc8a5f3c, 0 0 15px #f2cdb6;
         }
         .service-grid {
             display: grid;
@@ -167,8 +166,8 @@
             background: var(--card-bg);
             border-radius: 1.18rem;
             padding: 2rem 1.2rem;
-            box-shadow: 0 4px 18px #bcd2ee7a, var(--inner-shadow);
-            border: 2.3px solid var(--lavender);
+            box-shadow: 0 4px 18px #e0b88f7a, var(--inner-shadow);
+            border: 2.3px solid var(--tan);
             transition: transform 0.19s, box-shadow 0.19s, border-color 0.12s, background 0.22s, color 0.17s, filter 0.22s;
             min-height: 120px;
             display: flex;
@@ -188,7 +187,7 @@
             top: -40px;
             width: 110px;
             height: 110px;
-            background: linear-gradient(135deg, #f7a7c6 0%, #bcd2ee 100%);
+            background: linear-gradient(135deg, #fae6d8 0%, #e0b88f 100%);
             opacity: 0.13;
             border-radius: 50%;
             z-index: 0;
@@ -201,8 +200,8 @@
         }
         .service-card:hover, .service-card:focus-visible {
             transform: translateY(-7px) scale(1.03) rotate(-1deg);
-            box-shadow: 0 16px 40px #db498aad, 0 2px 18px #bcd2ee8f;
-            border-color: var(--rose);
+            box-shadow: 0 16px 40px #bc8a5fad, 0 2px 18px #e0b88f8f;
+            border-color: var(--brown);
             background: var(--service-hover);
             color: #fff;
             filter: brightness(1.05) contrast(1.12);
@@ -212,13 +211,13 @@
             font-size: clamp(1.1rem, 2.5vw, 1.5rem);
             font-weight: 800;
             margin-bottom: 0.7rem;
-            color: var(--mauve);
-            text-shadow: 0 1px 6px #fff, 0 2px 12px var(--rose-light);
+            color: var(--brown);
+            text-shadow: 0 1px 6px #fff, 0 2px 12px var(--peach);
             position: relative;
             z-index: 1;
         }
         .service-card p {
-            color: var(--blue-dark);
+            color: var(--dark);
             font-size: clamp(0.97rem, 2.8vw, 1.18rem);
             line-height: 1.7;
             text-align: center;
@@ -228,7 +227,7 @@
         .service-card:hover h3, .service-card:focus-visible h3,
         .service-card:hover p, .service-card:focus-visible p {
             color: #fff;
-            text-shadow: 0 2px 11px #db498a82;
+            text-shadow: 0 2px 11px #bc8a5f82;
         }
 
         .contact {
@@ -237,7 +236,7 @@
             margin: 0 auto 2.2rem auto;
             background: var(--glass-bg);
             border-radius: 1.3rem;
-            box-shadow: 0 2px 14px #bcd2ee54;
+            box-shadow: 0 2px 14px #e0b88f54;
             padding: 1.8rem 0.5rem 1.3rem 0.5rem;
             text-align: center;
             border: 2px solid #fff7;
@@ -250,12 +249,11 @@
             font-size: clamp(1.1rem, 4vw, 1.7rem);
             font-weight: bold;
             letter-spacing: 0.15em;
-            color: var(--mauve);
+            color: var(--brown);
             margin-bottom: 1rem;
-            text-shadow: 0 2px 10px #db498a5d, 0 0 12px #f7a7c6;
+            text-shadow: 0 2px 10px #bc8a5f5d, 0 0 12px #f2cdb6;
         }
 
-        /* Side Social Buttons - fixed at bottom right, small size */
         .side-contact {
             position: fixed;
             right: 0.7rem;
@@ -266,17 +264,17 @@
             flex-direction: column;
             gap: 0.55rem;
             z-index: 10000;
-            filter: drop-shadow(0 2px 8px #db498a6c);
+            filter: drop-shadow(0 2px 8px #bc8a5f6c);
         }
         .side-contact a {
             width: 42px;
             height: 42px;
-            background: var(--social-gradient, linear-gradient(135deg, #db498a 0%, #b882c8 100%));
+            background: var(--social-gradient, linear-gradient(135deg, #bc8a5f 0%, #e0b88f 100%));
             border-radius: 50%;
             display: flex;
             align-items: center;
             justify-content: center;
-            box-shadow: 0 4px 12px #dbd6df80;
+            box-shadow: 0 4px 12px #e0b88f80;
             color: #fff;
             text-decoration: none;
             font-size: 1.4rem;
@@ -284,11 +282,11 @@
             border: 2px solid #fff;
         }
         .side-contact a:hover {
-            background: var(--social-hover, linear-gradient(135deg, #26416D 0%, #f7a7c6 100%));
-            color: #DB88A4;
-            box-shadow: 0 8px 22px #db88a4a9, 0 0 0 3px #EEC6C7;
+            background: var(--social-hover, linear-gradient(135deg, #232323 0%, #f2cdb6 100%));
+            color: #bc8a5f;
+            box-shadow: 0 8px 22px #bc8a5fa9, 0 0 0 3px #f2cdb6;
             transform: scale(1.09) rotate(6deg);
-            border-color: #DB88A4;
+            border-color: #bc8a5f;
         }
         .side-contact svg {
             width: 62%;
@@ -306,9 +304,9 @@
             right: 1.6rem;
             width: clamp(36px, 8vw, 48px);
             height: clamp(36px, 8vw, 48px);
-            background: var(--blue);
+            background: var(--brown);
             border-radius: 50%;
-            box-shadow: 0 8px 22px #e9e6f5c8;
+            box-shadow: 0 8px 22px #f2cdb6c8;
             cursor: pointer;
             display: flex;
             align-items: center;
@@ -324,17 +322,17 @@
             outline: none;
         }
         #scrollTopBtn:focus-visible {
-            box-shadow: 0 0 0 5px #b882c8, 0 8px 22px #e9e6f59a !important;
-            border: 2px solid #db498a;
+            box-shadow: 0 0 0 5px #f2cdb6, 0 8px 22px #e0b88f9a !important;
+            border: 2px solid #bc8a5f;
         }
         #scrollTopBtn.show {
             opacity: 1;
             pointer-events: auto;
         }
         #scrollTopBtn:hover, #scrollTopBtn:active {
-            background: var(--rose);
-            color: var(--blue);
-            box-shadow: 0 15px 55px #db498ac4, 0 2px 20px #bcd2ee66;
+            background: var(--accent);
+            color: var(--dark);
+            box-shadow: 0 15px 55px #bc8a5fc4, 0 2px 20px #e0b88f66;
             transform: scale(1.12) rotate(-10deg);
         }
 
@@ -354,20 +352,20 @@
         }
 
         ::selection {
-            background: var(--rose-light);
+            background: var(--peach);
             color: #fff;
         }
         ::-webkit-scrollbar {
             width: 9px;
-            background: var(--blue-light);
+            background: var(--peach-light);
         }
         ::-webkit-scrollbar-thumb {
-            background: var(--rose);
+            background: var(--brown);
             border-radius: 12px;
         }
         footer {
             font-weight: 700;
-            color: var(--blue-dark);
+            color: var(--brown);
             background: var(--footer-bg);
             border-radius: 1.22rem 1.22rem 0 0;
             letter-spacing: 0.13em;
@@ -375,7 +373,7 @@
             user-select: none;
             padding: 1.2em 0 1em 0;
             font-style: italic;
-            text-shadow: 0 1px 3px #db498a47;
+            text-shadow: 0 1px 3px #bc8a5f47;
             font-size: clamp(0.8rem, 2vw, 1.1rem);
             margin: 0;
             z-index: 2;
@@ -399,11 +397,11 @@
         <svg>
             <defs>
                 <radialGradient id="circle1" cx="60%" cy="40%" r="80%">
-                    <stop offset="0%" stop-color="#bcd2ee" stop-opacity="0.6"/>
+                    <stop offset="0%" stop-color="#f5e5d1" stop-opacity="0.6"/>
                     <stop offset="100%" stop-color="#fff" stop-opacity="0"/>
                 </radialGradient>
                 <radialGradient id="circle2" cx="40%" cy="80%" r="70%">
-                    <stop offset="0%" stop-color="#db498a" stop-opacity="0.22"/>
+                    <stop offset="0%" stop-color="#bc8a5f" stop-opacity="0.18"/>
                     <stop offset="100%" stop-color="#fff" stop-opacity="0"/>
                 </radialGradient>
             </defs>
@@ -421,7 +419,7 @@
     <header>
         <div class="logo-title">
             <img src="https://imgur.com/iqVhMNs.png" alt="Digitala Logo" class="logo" />
-            <h1>For Digitala</h1>
+            <h1>Digitala</h1>
         </div>
     </header>
 
@@ -431,8 +429,8 @@
                   fill="url(#waveGradient1)"/>
             <defs>
                 <linearGradient id="waveGradient1" x1="0" y1="0" x2="1" y2="1">
-                    <stop offset="0%" stop-color="#bcd2ee" stop-opacity="0.2"/>
-                    <stop offset="65%" stop-color="#db498a" stop-opacity="0.11"/>
+                    <stop offset="0%" stop-color="#f2cdb6" stop-opacity="0.2"/>
+                    <stop offset="65%" stop-color="#bc8a5f" stop-opacity="0.11"/>
                 </linearGradient>
             </defs>
         </svg>
@@ -495,7 +493,7 @@
         ↑
     </button>
     <footer>
-        &copy; 2025 For Digitala. Site by Tala Chibli. All rights reserved.
+        &copy; 2025 Digitala. Site by Tala Chibli. All rights reserved.
     </footer>
     <script>
         // Scroll to Top Button logic
