--- a/digitala.html
+++ b/digitala.html
@@ -838,12 +838,17 @@
     </section>
     <section class="contact" id="contact">
         <h2>Contact Me</h2>
-        <form class="contact-form" action="#" method="POST" autocomplete="off">
-            <input type="text" name="name" placeholder="Your Name" required autocomplete="off" />
-            <input type="email" name="email" placeholder="Your Email" required autocomplete="off" />
-            <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
-            <button type="submit">Send Message</button>
-        </form>
+        <form action="https://formspree.io/f/mzzgwkvk" method="POST" class="contact-form" autocomplete="off">
+  <input type="text" name="name" placeholder="Your Name" required />
+  <input type="email" name="email" placeholder="Your Email" required />
+  <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+
+  <input type="hidden" name="_subject" value="رسالة جديدة من موقع Digitala" />
+  <input type="hidden" name="_language" value="ar" />
+  <input type="hidden" name="_captcha" value="false" />
+
+  <button type="submit">Send Message</button>
+</form>
     </section>
     <footer>
         <br>&copy; 2025 Tala Chibli. Portfolio. All rights reserved.</br>
