--- a/digitala.html
+++ b/digitala.html
@@ -243,16 +243,16 @@
     <h1>Digitala</h1>
     <div class="subtitle">BY: Tala Chibli</div>
     <div class="socials-header">
-      <a class="facebook" href="https://facebook.com" target="_blank" title="Facebook" aria-label="Facebook">
+      <a class="facebook" href="https://www.facebook.com/share/16ZTanPu9G/" target="_blank" title="Facebook" aria-label="Facebook">
         <svg viewBox="0 0 24 24" width="18" height="18" fill="currentColor"><path d="M22.676 0h-21.352c-.731 0-1.324.593-1.324 1.326v21.348c0 .731.593 1.326 1.324 1.326h11.497v-9.294h-3.128v-3.622h3.128v-2.672c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.796.143v3.24h-1.919c-1.504 0-1.797.715-1.797 1.763v2.314h3.587l-.467 3.622h-3.12V24h6.116c.729 0 1.322-.595 1.322-1.326V1.326C24 .593 23.405 0 22.676 0"/></svg>
       </a>
       <a class="whatsapp" href="https://wa.me/71732045" target="_blank" title="WhatsApp" aria-label="WhatsApp">
         <svg viewBox="0 0 24 24" width="18" height="18" fill="currentColor"><path d="M20.52 3.48A11.91 11.91 0 0012 0C5.373 0 0 5.373 0 12c0 2.12.553 4.15 1.602 5.96L0 24l6.1-1.592A11.938 11.938 0 0012 24c6.627 0 12-5.373 12-12 0-3.14-1.226-6.094-3.48-8.52zm-8.14 16.99a8.344 8.344 0 01-4.37-1.25l-.314-.204-3.633.949.971-3.54-.2-.315a8.355 8.355 0 011.25-11.95 8.49 8.49 0 0111.95 1.25 8.345 8.345 0 01-8.83 14.81zm4.89-6.064c-.214-.11-1.265-.622-1.46-.692-.195-.07-.337-.11-.48.109-.14.213-.54.693-.66.835-.12.143-.24.16-.445.055-.205-.104-.86-.317-1.64-.996-.606-.54-1.014-1.21-1.13-1.416-.117-.208-.012-.32.084-.423.086-.086.19-.225.286-.337.094-.11.125-.19.187-.317.062-.128.03-.24-.015-.337-.044-.097-.48-1.15-.66-1.57-.174-.41-.35-.355-.48-.362-.123-.007-.27-.01-.415-.01s-.337.05-.515.24c-.177.192-.67.655-.67 1.595s.686 1.854.78 1.983c.093.127 1.347 2.05 3.262 2.87.456.197.81.314 1.087.402.456.146.87.125 1.2.076.367-.055 1.265-.516 1.445-1.015.18-.5.18-.928.125-1.015-.05-.088-.185-.143-.398-.252z"/></svg>
       </a>
-      <a class="instagram" href="https://www.instagram.com/4.digitala" target="_blank" title="Instagram" aria-label="Instagram">
+      <a class="instagram" href="https://www.instagram.com/digitala.zone?igsh=MWs0a3JkdDNpOW1rZw==" target="_blank" title="Instagram" aria-label="Instagram">
         <svg viewBox="0 0 24 24" width="18" height="18" fill="currentColor"><path d="M7.75 2h8.5A5.75 5.75 0 0122 7.75v8.5A5.75 5.75 0 0116.25 22h-8.5A5.75 5.75 0 012 16.25v-8.5A5.75 5.75 0 017.75 2zm0 2A3.75 3.75 0 004 7.75v8.5A3.75 3.75 0 007.75 20h8.5a3.75 3.75 0 003.75-3.75v-8.5A3.75 3.75 0 0016.25 4h-8.5zM12 7a5 5 0 110 10 5 5 0 010-10zm0 2a3 3 0 100 6 3 3 0 000-6zm4.5-2a1.25 1.25 0 110 2.5 1.25 1.25 0 010-2.5z"/></svg>
       </a>
-      <a class="linkedin" href="https://www.linkedin.com/in/tala-chibli-89a8632ab" target="_blank" title="LinkedIn" aria-label="LinkedIn">
+      <a class="linkedin" href="https://www.linkedin.com/in/tala-chibli-89a8632ab?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" title="LinkedIn" aria-label="LinkedIn">
         <svg viewBox="0 0 24 24" width="18" height="18" fill="currentColor"><path d="M4.98 3.5C3.34 3.5 2 4.84 2 6.48c0 1.64 1.34 2.98 2.98 2.98 1.64 0 2.98-1.34 2.98-2.98 0-1.64-1.34-2.98-2.98-2.98zM2.5 21.5h5v-11h-5v11zm6.92-12.34h4.57v1.58h.07c.64-1.21 2.2-2.5 4.53-2.5 4.85 0 5.74 3.19 5.74 7.32v8.42h-5v-7.47c0-1.78-.03-4.06-2.47-4.06-2.47 0-2.85 1.92-2.85 3.9v7.63h-5v-11z"/></svg>
       </a>
     </div>
