--- a/digitala.html
+++ b/digitala.html
@@ -260,7 +260,8 @@
     <main class="px-8 max-w-5xl mx-auto mb-24 select-text">
         <!-- About Section -->
         <section id="about" class="mt-16 mb-20 opacity-0 translate-y-8">
-            <h2 class="text-accentDark mb-6 border-b-4 border-accent w-fit cursor-default select-none font-bold">
+                        <h2
+                class="text-accentDark mb-10 text-3xl border-b-4 border-accent w-fit cursor-default select-none font-bold">
                 About Me
             </h2>
             <p class="text-soft leading-relaxed max-w-3xl font-soft">
@@ -374,8 +375,10 @@
 
         <!-- Testimonials Section -->
         <section id="testimonials" class="mt-16 mb-20 opacity-0 translate-y-8">
-            <h2 class="text-accentDark mb-8 border-b-4 border-accent w-fit cursor-default select-none font-bold">What
-                Clients Say</h2>
+                        <h2
+                class="text-accentDark mb-10 text-3xl border-b-4 border-accent w-fit cursor-default select-none font-bold">
+                Clients Say
+            </h2>
             <div class="space-y-10 max-w-4xl mx-auto">
                 <blockquote
                     class="bg-overlay p-6 rounded-xl shadow-lg italic font-soft text-soft relative before:content-['“'] before:absolute before:-top-6 before:-left-6 before:text-7xl before:text-accentDark/30">
@@ -397,8 +400,10 @@
 
         <!-- Contact Section -->
         <section id="contact" class="mb-24 opacity-0 translate-y-8">
-            <h2 class="text-accentDark mb-8 border-b-4 border-accent w-fit cursor-default select-none font-bold">Get In
-                Touch</h2>
+                        <h2
+                class="text-accentDark mb-10 text-3xl border-b-4 border-accent w-fit cursor-default select-none font-bold">
+                Get in Touch
+            </h2>
             <form action="https://formspree.io/f/mzzgwkvk" method="POST"
                 class="max-w-xl mx-auto bg-card p-8 rounded-xl shadow-lg grid gap-6">
                 <label class="block font-semibold text-accentDark">Name
