--- a/digitala.html
+++ b/digitala.html
@@ -18,12 +18,12 @@
             galactic: ['Montserrat', 'Quicksand', 'sans-serif']
           },
           colors: {
-            base: '#fff6ec',
+            base: '#1c1512',
             accent: '#fb923c',
             accentDark: '#d97706',
-            card: '#ffe3c7',
-            overlay: '#fff1e0',
-            soft: '#7c4a1e',
+            card: '#2d221b',
+            overlay: '#2a1a10',
+            soft: '#ffe3c7',
             border: '#fbbf24'
           },
           keyframes: {
@@ -33,7 +33,7 @@
             }
           },
           animation: {
-            slideUp: 'slideUp 1.2s ease-in-out forwards'
+            slideUp: 'slideUp 1.2s cubic-bezier(.49,.26,.21,1.07) forwards'
           },
           dropShadow: {
             'orange-glow': '0 4px 32px #fb923c44',
@@ -43,34 +43,40 @@
     }
   </script>
   <style>
-    html { scroll-behavior: smooth; background: #fff6ec; min-height: 100%; }
-    body { min-width: 1024px; max-width: 1140px; margin: 0 auto; }
-    /* Custom scrollbar */
-    ::-webkit-scrollbar { width: 10px; background: #fb923c22;}
-    ::-webkit-scrollbar-thumb { background: #fb923c77; border-radius: 6px;}
+    html {
+      scroll-behavior: smooth;
+      background: linear-gradient(135deg, #24140c 30%, #39220c 100%);
+      min-height: 100%;
+    }
+    body {
+      min-width: 1024px;
+      max-width: 1140px;
+      margin: 0 auto;
+      background: transparent;
+    }
     /* Sections animation */
-    section { opacity: 0; transform: translateY(30px); animation-fill-mode: forwards; animation-duration: 1.2s; animation-timing-function: ease-in-out;}
+    section { opacity: 0; transform: translateY(30px); animation-fill-mode: forwards; animation-duration: 1.2s; }
     section.visible { opacity: 1; transform: translateY(0); animation-name: slideUp;}
     /* Card hover effect */
-    .card-hover:hover { transform: translateY(-8px) scale(1.035); box-shadow: 0 8px 32px #fb923c33, 0 1.5px 6px #d9770622; transition: all 0.3s cubic-bezier(.49,.26,.21,1.07);}
+    .card-hover:hover { transform: translateY(-8px) scale(1.045); box-shadow: 0 8px 32px #fb923c33,0 0px 10px #fbbf2455; transition: all 0.3s cubic-bezier(.49,.26,.21,1.07);}
     /* Navbar underline */
     nav a { position: relative; }
     nav a::after { content: ''; position: absolute; left: 0; bottom: -7px; width: 0%; height: 3px; background: #fb923c; border-radius: 3px; transition: width .3s;}
     nav a:hover::after, nav a:focus::after { width: 100%;}
-    /* Navbar glass effect */
     .navbar-blur {
-      backdrop-filter: blur(16px) saturate(180%);
-      -webkit-backdrop-filter: blur(16px) saturate(180%);
-      background: rgba(255, 246, 236, 0.92);
-      box-shadow: 0 6px 48px #fb923c22;
-      border-bottom: 3.2px solid #fb923c;
+      backdrop-filter: blur(18px) saturate(180%);
+      -webkit-backdrop-filter: blur(18px) saturate(180%);
+      background: linear-gradient(90deg, #2e160b 0%, #fb923c18 100%);
+      box-shadow: 0 7px 36px #fb923c2a;
+      border-bottom: 4px solid #fb923c;
+      border-radius: 0 0 2.9rem 2.9rem;
     }
-    /* Responsive tweaks */
     @media (max-width: 1100px) { body { max-width: 100vw; } }
     @media (max-width: 1023px) {
       body, .navbar-blur { min-width: 100vw; max-width: 100vw; }
-      .main-nav { flex-wrap: wrap; gap: 0.7rem; }
-      .social-icons { gap: 0.7rem !important; }
+      .main-nav { flex-wrap: wrap; gap: .7rem;}
+      .social-icons { gap: .7rem !important; }
+      .navbar-blur{border-radius:0;}
     }
     @media (max-width: 900px) {
       .main-nav { font-size: 1.08rem; }
@@ -80,56 +86,70 @@
       body, .navbar-blur { min-width: 100vw; max-width: 100vw; }
       header h1 { font-size: 2.7rem !important; }
       .main-nav { font-size: 1rem !important; }
-      .social-icons svg { width: 28px !important; height: 28px !important; }
+      .social-icons svg { width: 29px !important; height: 29px !important; }
     }
-    /* Social hover effect */
     .social-link svg { transition: transform 0.18s; }
-    .social-link:hover svg { transform: scale(1.18) rotate(-9deg);}
+    .social-link:hover svg { transform: scale(1.19) rotate(-10deg);}
+    /* Gradient border for avatar */
+    .avatar-border {
+      padding: 4px;
+      background: linear-gradient(130deg, #fb923c 0%, #ffe3c7 100%);
+      border-radius: 50%;
+      display: inline-block;
+    }
   </style>
 </head>
 <body class="bg-base font-galactic text-soft min-h-screen">
 
   <!-- NAVBAR -->
-  <nav class="navbar-blur fixed top-0 left-1/2 -translate-x-1/2 w-[98vw] max-w-[1120px] z-40 py-0 px-0 shadow-xl flex items-center justify-center rounded-b-[2.4rem] border-accentDark"
-    style="height: 86px;">
-    <div class="w-full flex items-center justify-between px-10 max-w-[1080px]">
-      <span class="font-black text-3xl text-accentDark tracking-widest select-none" style="letter-spacing: .17em;">
-        DIGITALA<span class="text-accent">.</span>
+  <nav class="navbar-blur fixed top-0 left-1/2 -translate-x-1/2 w-[99vw] max-w-[1200px] z-40 py-0 px-0 shadow-xl flex items-center justify-center"
+    style="height:97px;">
+    <div class="w-full flex items-center justify-between px-14 max-w-[1200px]">
+      <span class="font-black text-3xl text-accent tracking-widest select-none drop-shadow-orange-glow" style="letter-spacing:.17em;">
+        DIGITALA<span class="text-accentDark">.</span>
       </span>
-      <div class="flex gap-2 items-center">
-        <div class="flex main-nav gap-6 font-semibold text-lg">
-          <a href="#about" class="text-soft hover:text-accentDark transition">About</a>
-          <a href="#skills" class="text-soft hover:text-accentDark transition">Skills</a>
-          <a href="#services" class="text-soft hover:text-accentDark transition">Services</a>
-          <a href="#testimonials" class="text-soft hover:text-accentDark transition">Testimonials</a>
-          <a href="#contact" class="text-soft hover:text-accentDark transition">Contact</a>
+      <div class="flex gap-4 items-center">
+        <div class="flex main-nav gap-7 font-semibold text-lg">
+          <a href="#about" class="text-soft hover:text-accent transition">About</a>
+          <a href="#skills" class="text-soft hover:text-accent transition">Skills</a>
+          <a href="#services" class="text-soft hover:text-accent transition">Services</a>
+          <a href="#testimonials" class="text-soft hover:text-accent transition">Testimonials</a>
+          <a href="#contact" class="text-soft hover:text-accent transition">Contact</a>
         </div>
         <!-- SOCIAL ICONS -->
-        <div class="flex social-icons gap-4 ml-8">
+        <div class="flex social-icons gap-6 ml-11">
           <!-- WhatsApp -->
           <a href="https://wa.me/71732045" target="_blank" title="WhatsApp" class="social-link">
-            <svg width="34" height="34" viewBox="0 0 34 34" fill="none">
-              <circle cx="17" cy="17" r="17" fill="#25D366"/>
-              <path d="M25.5 22.5c-1.1.8-2.2 1.3-3.5 1.5-1.3.2-2.7.1-4-.4-1.2-.4-2.4-1.1-3.4-2-1-.8-1.9-1.9-2.6-3-.8-1.2-1.3-2.4-1.5-3.7 0-1.3.1-2.7.5-4 .3-1.3.8-2.4 1.7-3.3C13.1 7.9 14.2 7.4 15.5 7.2c1.3-.2 2.7-.1 4 .4 1.2.4 2.4 1.1 3.4 2 .9.8 1.8 1.9 2.6 3 .8 1.2 1.3 2.4 1.5 3.7 0 1.3-.1 2.7-.5 4-.3 1.3-.8 2.5-1.7 3.3zm-5.7-8.9c-1.5-1.9-3.6-2.3-4.5-2.3-.8 0-1.3.5-1.5.8-.2.2-.7 1.2-.3 2.2.4.9 1.5 2.9 3.6 4.4 2.1 1.5 4.2 1.3 5.1.9.9-.4 1.4-1 1.6-1.2.2-.2.7-.8.7-1.7s-.9-1.2-1.2-1.3c-.4-.1-2-.9-2.8-1.8z" fill="#fff"/>
+            <svg width="35" height="35" viewBox="0 0 35 35">
+              <circle cx="17.5" cy="17.5" r="17.5" fill="#25D366"/>
+              <path fill="#fff" d="M26.5 24.5c-1.22.89-2.44 1.44-3.93 1.66-1.49.22-3.05.1-4.52-.47-1.39-.47-2.78-1.2-4.01-2.21a12.24 12.24 0 0 1-3.01-4.01c-.81-1.39-1.36-2.71-1.58-4.19.08-1.49.24-3.08.93-4.52.69-1.44 1.74-2.61 3.13-3.5C15.04 6.47 16.53 6.13 18.07 6.35c1.54.22 3.1.69 4.54 1.59a13.15 13.15 0 0 1 4.01 3c1.01 1.23 1.74 2.62 2.21 4.01.57 1.47.69 3.03.47 4.52-.22 1.49-.77 2.71-1.66 3.93zM18.27 13.2c-1.6-2.06-3.81-2.52-4.82-2.52-.87 0-1.41.56-1.65.84-.23.28-.75 1.26-.33 2.37.41 1.11 1.64 3.14 3.91 4.74 2.27 1.6 4.48 1.37 5.5.96 1.02-.41 1.61-1.05 1.81-1.28.2-.23.75-.89.75-1.87 0-.98-1.01-1.29-1.32-1.38-.31-.09-2.25-.99-3.5-2.86z"/>
             </svg>
           </a>
           <!-- Instagram -->
           <a href="https://www.instagram.com/digitala.zone?igsh=MWs0a3JkdDNpOW1rZw==" target="_blank" title="Instagram" class="social-link">
-            <svg width="34" height="34" viewBox="0 0 34 34" fill="none">
-              <circle cx="17" cy="17" r="17" fill="#E4405F"/>
-              <rect x="9" y="9" width="16" height="16" rx="6" fill="white"/>
-              <circle cx="17" cy="17" r="4.5" fill="#E4405F"/>
-              <circle cx="23.5" cy="10.5" r="1.5" fill="#E4405F"/>
+            <svg width="35" height="35" viewBox="0 0 35 35">
+              <defs>
+                <radialGradient id="instaGrad" cx="50%" cy="50%" r="80%" fx="50%" fy="50%">
+                  <stop offset="0%" stop-color="#fd5"/>
+                  <stop offset="45%" stop-color="#ff543e"/>
+                  <stop offset="60%" stop-color="#c837ab"/>
+                  <stop offset="90%" stop-color="#285AEB"/>
+                </radialGradient>
+              </defs>
+              <circle cx="17.5" cy="17.5" r="17.5" fill="url(#instaGrad)"/>
+              <rect x="10" y="10" width="15" height="15" rx="6" fill="#fff" opacity=".95"/>
+              <circle cx="17.5" cy="17.5" r="4.8" fill="url(#instaGrad)"/>
+              <circle cx="24.2" cy="11.2" r="1.4" fill="url(#instaGrad)"/>
             </svg>
           </a>
           <!-- LinkedIn -->
           <a href="https://www.linkedin.com/in/tala-chibli-89a8632ab?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" title="LinkedIn" class="social-link">
-            <svg width="34" height="34" viewBox="0 0 34 34" fill="none">
-              <circle cx="17" cy="17" r="17" fill="#0077B5"/>
-              <rect x="10.5" y="14" width="2.5" height="9" fill="white"/>
-              <circle cx="11.75" cy="11.75" r="1.25" fill="white"/>
-              <rect x="15" y="14" width="2.5" height="5.5" fill="white"/>
-              <rect x="17.5" y="16.5" width="2.5" height="6.5" fill="white"/>
+            <svg width="35" height="35" viewBox="0 0 35 35">
+              <circle cx="17.5" cy="17.5" r="17.5" fill="#0077B5"/>
+              <rect x="12" y="15" width="3" height="10" fill="#fff"/>
+              <circle cx="13.5" cy="12.5" r="1.5" fill="#fff"/>
+              <rect x="17" y="15" width="3" height="6.5" fill="#fff"/>
+              <rect x="20.5" y="18" width="3" height="7" fill="#fff"/>
             </svg>
           </a>
         </div>
@@ -138,19 +158,20 @@
   </nav>
 
   <!-- HEADER -->
-  <header class="min-h-[55vh] flex flex-col justify-center items-center px-4 text-center relative pt-44 overflow-hidden">
-    <img src="https://i.imgur.com/iqVhMNs.png" alt="Logo" class="w-36 h-36 rounded-full border-4 border-accent shadow-lg mb-6 drop-shadow-orange-glow" />
-    <h1 class="text-accent drop-shadow-orange-glow z-10 font-black text-6xl md:text-7xl tracking-tight select-none">Digitala</h1>
-    <p class="mt-5 text-soft max-w-xl font-medium z-10 text-lg select-none">
+  <header class="min-h-[58vh] flex flex-col justify-center items-center px-4 text-center relative pt-48 overflow-hidden">
+    <span class="avatar-border mb-8 mt-8">
+      <img src="https://i.imgur.com/iqVhMNs.png" alt="Logo" class="w-36 h-36 rounded-full shadow-lg" />
+    </span>
+    <h1 class="text-accent drop-shadow-orange-glow z-10 font-black text-7xl md:text-8xl tracking-tight select-none">Digitala</h1>
+    <p class="mt-5 max-w-xl font-medium z-10 text-xl text-soft select-none">
       Digital Services By <span class="text-accentDark font-bold">Tala Chibli</span><br>
-      <span class="text-base block mt-2 text-soft/60">
-        With 3 years of experience in the digital field, I offer a complete package to take your brand to the
-        next level.<br>
+      <span class="text-base block mt-2 text-soft/70">
+        With 3 years of experience in the digital field, I offer a complete package to take your brand to the next level.<br>
         From strategy to design to execution. I handle it all like it's my own project.
       </span>
     </p>
     <a href="#contact"
-      class="mt-12 inline-block px-14 py-4 rounded-2xl bg-accentDark text-base-100 font-semibold shadow-lg hover:bg-accent transition-transform hover:scale-110 z-10 drop-shadow-orange-glow text-lg"
+      class="mt-12 inline-block px-16 py-4 rounded-2xl bg-accentDark text-base-100 font-semibold shadow-lg hover:bg-accent transition-transform hover:scale-110 z-10 drop-shadow-orange-glow text-lg"
       style="letter-spacing:.06em;">
       Let's Collaborate
     </a>
@@ -162,10 +183,7 @@
     <section id="about" class="mt-20 mb-20 opacity-0 translate-y-8">
       <h2 class="text-accentDark mb-9 text-4xl border-b-4 border-accent w-fit select-none font-bold px-2">About Me</h2>
       <p class="text-soft leading-relaxed max-w-2xl font-soft text-lg">
-        Tala, Palestinian girl living in Lebanon. Currently pursuing a double major in English Literature at the
-        Lebanese University and Management Information Systems at Siblin Training Center. Deeply passionate
-        about art and creativity. I have a vivid imagination, and I love expressing it through writing and
-        design.
+        Tala, Palestinian girl living in Lebanon. Currently pursuing a double major in English Literature at the Lebanese University and Management Information Systems at Siblin Training Center. Deeply passionate about art and creativity. I have a vivid imagination, and I love expressing it through writing and design.
       </p>
     </section>
 
@@ -175,7 +193,7 @@
       <div class="grid grid-cols-1 md:grid-cols-3 gap-9 max-w-6xl">
         <div class="bg-card rounded-2xl p-7 shadow-lg card-hover">
           <h3 class="text-accentDark mb-4 text-xl font-semibold">Design & Creativity</h3>
-          <ul class="list-disc list-inside text-soft leading-relaxed font-soft text-base">
+          <ul class="list-disc list-inside leading-relaxed font-soft text-base text-soft">
             <li>Graphic Design</li>
             <li>UI/UX Design</li>
             <li>Social Media Content Design</li>
@@ -185,7 +203,7 @@
         </div>
         <div class="bg-card rounded-2xl p-7 shadow-lg card-hover">
           <h3 class="text-accentDark mb-4 text-xl font-semibold">Development & Digital Tools</h3>
-          <ul class="list-disc list-inside text-soft leading-relaxed font-soft text-base">
+          <ul class="list-disc list-inside leading-relaxed font-soft text-base text-soft">
             <li>HTML / CSS / JavaScript</li>
             <li>Responsive Web Design</li>
             <li>Git & GitHub (Basic)</li>
@@ -195,7 +213,7 @@
         </div>
         <div class="bg-card rounded-2xl p-7 shadow-lg card-hover">
           <h3 class="text-accentDark mb-4 text-xl font-semibold">Media & Marketing Skills</h3>
-          <ul class="list-disc list-inside text-soft leading-relaxed font-soft text-base">
+          <ul class="list-disc list-inside leading-relaxed font-soft text-base text-soft">
             <li>Digital Marketing</li>
             <li>Content Creation</li>
             <li>Social Media Strategy & Management</li>
@@ -244,15 +262,15 @@
         class="max-w-xl mx-auto bg-card p-8 rounded-2xl shadow-lg grid gap-7">
         <label class="block font-semibold text-accentDark">Name
           <input required type="text" name="name"
-            class="mt-1 w-full rounded-md border border-accentDark px-3 py-2 font-soft text-soft focus:outline-none focus:ring-2 focus:ring-accent" />
+            class="mt-1 w-full rounded-md border border-accentDark px-3 py-2 font-soft text-soft focus:outline-none focus:ring-2 focus:ring-accent bg-base" />
         </label>
         <label class="block font-semibold text-accentDark">Email
           <input required type="email" name="email"
-            class="mt-1 w-full rounded-md border border-accentDark px-3 py-2 font-soft text-soft focus:outline-none focus:ring-2 focus:ring-accent" />
+            class="mt-1 w-full rounded-md border border-accentDark px-3 py-2 font-soft text-soft focus:outline-none focus:ring-2 focus:ring-accent bg-base" />
         </label>
         <label class="block font-semibold text-accentDark">Message
           <textarea required name="message" rows="5"
-            class="mt-1 w-full rounded-md border border-accentDark px-3 py-2 font-soft text-soft resize-y focus:outline-none focus:ring-2 focus:ring-accent"></textarea>
+            class="mt-1 w-full rounded-md border border-accentDark px-3 py-2 font-soft text-soft resize-y focus:outline-none focus:ring-2 focus:ring-accent bg-base"></textarea>
         </label>
         <button type="submit"
           class="bg-accentDark text-base-100 px-7 py-3 rounded-xl font-semibold text-lg hover:bg-accent transition-transform hover:scale-105 drop-shadow-orange-glow">
